# pulsarbat

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  codecov.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_docs.yml  ci_workflow.yml  linting.yml  release.yml  tests.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  contributing.rst  development.rst  examples.rst  index.rst  install.rst  installation.rst  make.bat  reference.rst  requirements.txt  tutorial.rst  usage.rst
docs/_static/: custom.css  switcher.json
docs/_templates/: breadcrumbs_custom.html  random.html  signal_class.rst  version-switcher.html
docs/api/: contrib.rst  core.rst  dedispersion.rst  fake.rst  index.rst  pulsar.rst  pulsarbat.BasebandSignal.rst  pulsarbat.Polyco.rst  reader.rst  readers.rst  reductions.rst  signal_funcs.rst  signals.rst  test.rst  transforms.rst  utils.rst
docs/api/dedispersion/: pulsarbat.DispersionMeasure.rst  pulsarbat.coherent_dedispersion.rst  pulsarbat.incoherent_dedispersion.rst
docs/api/signals/: pulsarbat.BasebandSignal.rst  pulsarbat.DualPolarizationSignal.rst  pulsarbat.FullStokesSignal.rst  pulsarbat.IntensitySignal.rst  pulsarbat.RadioSignal.rst  pulsarbat.Signal.rst
docs/api/transforms/: pulsarbat.concatenate.rst
docs/reference/: contrib.rst  dedispersion.rst  index.rst  pulsar.rst  readers.rst  signals.rst  transforms.rst
docs/tutorial/: index.rst
docs/user_guide/: index.rst  signals.ipynb  waterfall.ipynb
examples/: ideal_script.py
pulsarbat/: __init__.py  core.py  dedispersion.py  dispersion.py  fake.py  fft.py  misc.py  observation.py  planner.py  predictor.py  pulsar.py  reader.py  reductions.py  signal_funcs.py  transforms.py  utils.py
pulsarbat/contrib/: __init__.py  misc.py
pulsarbat/generator/: __init__.py  base.py
pulsarbat/pulsar/: __init__.py  folding.py  phase.py  predictor.py  pulsar.py
pulsarbat/reader/: __init__.py  base.py  baseband_readers.py  dask_baseband_readers.py
pulsarbat/readers/: __init__.py  _base.py  _baseband_readers.py
pulsarbat/signal_funcs/: __init__.py  core.py  dedispersion.py
pulsarbat/timing/: phase.py  predictor.py
pulsarbat/transform/: __init__.py  base.py  dedispersion.py
pulsarbat/transforms/: __init__.py  dedispersion.py  transforms.py
tests/: _test_baseband_readers.py  test_baseband_readers.py  test_contrib.py  test_dedispersion.py  test_fft.py  test_guppi_reader.py  test_misc.py  test_phase_predictor.py  test_polarization.py  test_polyco_phase.py  test_pulsarbat.py  test_radio_signal.py  test_radio_signals.py  test_readers.py  test_signal.py  test_signal_funcs.py  test_transforms.py  test_utils.py
tests/data/: fake.0.raw  fake.1.raw  fake.2.raw  fake.3.raw  stokes_ef.dada
