[metadata]
name = pulsarbat
author = Nikhil Mahajan
author_email = mahajan@astro.utoronto.ca
version = attr: pulsarbat.__version__
description = pulsarbat (PULSAR Baseband Analysis Tools) is a Python package for analysis of radio baseband observations of pulsars.
long_description = file: README.rst, HISTORY.rst
keywords = science, astronomy, astrophysics, pulsars, radio, signal
license = GNU General Public License v3
license_file = LICENSE
url = https://github.com/theXYZT/pulsarbat
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
requires =
    numpy
    astropy
    scipy
    baseband

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    astropy>=4.2
    numpy>=1.20
    scipy>=1.6
    baseband>=4.0.3
python_requires = >=3.8
tests_require = pytest>=6.2

[options.extras_require]
all =
    dask[array,delayed]>=2021.4

[bumpversion]
current_version = 0.0.4
commit = True
tag = True

[bumpversion:file:pulsarbat/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
minversion = 6.2
testpaths =
    tests

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError
    raise AssertionError
    raise NotImplementedError
    return NotImplemented
omit =
    pulsarbat/timing/phase.py
    pulsarbat/misc.py
