[metadata]
name = pulsarbat
version = attr: pulsarbat.__version__
author = Nikhil Mahajan
author_email = mahajan@astro.utoronto.ca
description = pulsarbat (PULSAR Baseband Analysis Tools) is a Python package for analysis of radio baseband observations of pulsars.
long_description = file: README.rst
keywords = science, astronomy, astrophysics, pulsars, radio, signal
license = GNU General Public License v3
license_file = LICENSE
url = https://github.com/theXYZT/pulsarbat
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9

[options.package_data]
pulsarbat =
    tests/data/*

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88
extend-ignore = E203

[aliases]
test = pytest

[tool:pytest]
minversion = 7.1
filterwarnings =
    ignore:SelectableGroups dict interface is deprecated.:DeprecationWarning
testpaths =
    tests

[coverage:report]
exclude_lines =
    pragma: no cover
    raise AssertionError
    raise NotImplementedError
    return NotImplemented
omit =
    pulsarbat/pulsar/phase.py
    pulsarbat/contrib/misc.py
